[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "aiotelegraf"
version = "0.3.0-alpha.0"
description = "AsyncIO Python client for sending metrics to Telegraf"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aiotelegraf"
repository = "https://github.com/Gr1N/aiotelegraf"

keywords = ["asyncio", "telegraf", "influx", "tick"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

pytelegraf = ">=0.3.3"

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allows-prereleases = true }
flake8 = ">=3.6.0"
flake8-bugbear = ">=18.8.0"
isort = ">=4.3.4"
mypy = ">=0.650"
pytest = ">=4.1.0"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.6.0"
tox = ">=3.6.0"
