[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",
  # Don't complain about some magic methods:
  "def __str__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = "aiotelegraf"
known_standard_library = ""
known_third_party = ""
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.venv,venv"

[tool.poetry]
name = "aiotelegraf"
version = "0.3.0-alpha.0"
description = "AsyncIO Python client for sending metrics to Telegraf"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/aiotelegraf"
repository = "https://github.com/Gr1N/aiotelegraf"

keywords = ["asyncio", "telegraf", "influx", "tick"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

pytelegraf = ">=0.3.3"

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allow-prereleases = true }
coverage = { version = ">=5.0", extras = ["toml"] }
flake8 = ">=3.7.6"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.5", extras = ["pyproject"] }
mypy = ">=0.670"
pytest = ">=4.3.0"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
